<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name">Sanjay Mangaroliya</string>
    <string name="email">sanjaymangroliya1800@gmail.com</string>
    <string name="android">ANDROID</string>
    <string name="ios">IOS</string>
    <string name="java">JAVA</string>
    <string name="php">PHP</string>
    <string name="asp_net">ASP.NET</string>
</resources>
