<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_android"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/android" />
        <item
            android:id="@+id/nav_ios"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/ios" />
        <item
            android:id="@+id/nav_java"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/java" />
        <item
            android:id="@+id/nav_php"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/php" />
        <item
            android:id="@+id/nav_asp_net"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/asp_net" />
    </group>
</menu>